Fixed name typos and merged graphs.

--- a/src/templates/stocks_results.html
+++ b/src/templates/stocks_results.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 		<script type="text/javascript">
-query_data = @JSON_QUERY_DATA_STRING;
+query_data = JSON.parse('@JSON_QUERY_DATA_STRING');
 @HIGHCHARTS_SETUP
     </script>
     <div id="heading"><center><h1>Results of Query</h1><center></div>
